--- a/designSite/design/templates/design.html
+++ b/designSite/design/templates/design.html
@@ -414,7 +414,10 @@
           <i class="dropdown icon"></i>
         </div>
         <br>
-        <span id="selected-part-sequence">Selected Part Sequence here</span>
+        <div class="content">
+          <label class="ui header" id="selected-part-text"> Sequence Selecting Area </label><br />
+        <textarea id="selected-part-sequence" readonly="readonly" rows=3>Selected Part Sequence here</textarea>
+        </div>
         <br>
         <div class="ui button" id="add-to-sequence-button"> add to sequence</div>
       </div>
