--- a/designSite/static/css/design.css
+++ b/designSite/static/css/design.css
@@ -100,6 +100,7 @@
   height: 50px;
   padding: 12px;
   margin-top: 5px;
+  margin-bottom: 0px;
   background-color: #c0a6a9;
   text-align: center;
   font-size: 20px;
@@ -134,8 +135,9 @@
 }
 
 #part-info-des {
-  max-height: 150px;
+  max-height: 180px;
   overflow-y: auto;
+  padding: 5px;
 }
 
 .ui.tabular.menu>.item {
