kinda of things

--- a/designSite/search/templates/search_result.html
+++ b/designSite/search/templates/search_result.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-  <title>Search</title>
+  <title>CO-RAD-SEARCH</title>
 
   <link rel="shortcut icon" href="/static/img/favicon.png">
   <link rel="stylesheet" href="/static/css/fontsize.css">
@@ -50,9 +50,9 @@
                 </div>
                 <div class="column middle aligned">
                     <div class="ui breadcrumb search-choice-bar shadow-font">
-                        <a data-type="paper" class="selected section CORADSearchSelector"><span class="shadow-font">Paper</span></a>
+                        <a data-type="project" class="selected section CORADSearchSelector"><span class="shadow-font">Project</span></a>
                         <div class="divider"></div>
-                        <a data-type="project" class="section CORADSearchSelector"><span class="shadow-font">Project</span></a>
+                        <a data-type="paper" class="section CORADSearchSelector"><span class="shadow-font">Paper</span></a>
                     </div>
                 </div>
             </div>
