--- a/designSite/search/templates/paper.html
+++ b/designSite/search/templates/paper.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-  <title>{{ title }} - Paper detail - S-Din</title>
+  <title>{{ title }} - Paper detail - CO-RAD-SEARCH</title>
   <link rel="shortcut icon" href="/static/img/favicon.png">
   <link rel="stylesheet" href="/static/css/fontsize.css">
   <link rel="stylesheet" href="/static/semantic/dist/semantic.min.css">
@@ -53,9 +53,9 @@
               </div>
               <div class="column middle aligned">
                   <div class="ui breadcrumb search-choice-bar shadow-font">
-                      <a data-type="paper" class="selected section CORADSearchSelector"><span class="shadow-font">Paper</span></a>
-                      <div class="divider"></div>
-                      <a data-type="project" class="section CORADSearchSelector"><span class="shadow-font">Project</span></a>
+                    <a data-type="project" class="selectedsection CORADSearchSelector"><span class="shadow-font">Project</span></a>
+                    <div class="divider"></div>
+                    <a data-type="paper" class="section CORADSearchSelector"><span class="shadow-font">Paper</span></a>
                   </div>
               </div>
           </div>
