--- a/designSite/search/templates/work.html
+++ b/designSite/search/templates/work.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-    <title>{{ projectName }} | {{ year }}-{{ teamName }} - Project detail - S-Din</title>
+    <title>{{ projectName }} | {{ year }}-{{ teamName }} - Project detail - CO-RAD-SEARCH</title>
     <link rel="shortcut icon" href="/static/img/favicon.png">
     <link rel="stylesheet" href="/static/css/fontsize.css">
     <link rel="stylesheet" href="/static/semantic/dist/semantic.min.css">
@@ -52,9 +52,9 @@
                 </div>
                 <div class="column middle aligned">
                     <div class="ui breadcrumb search-choice-bar shadow-font">
-                        <a data-type="paper" class="selected section CORADSearchSelector"><span class="shadow-font">Paper</span></a>
+                        <a data-type="project" class="selected section CORADSearchSelector"><span class="shadow-font">Project</span></a>
                         <div class="divider"></div>
-                        <a data-type="project" class="section CORADSearchSelector"><span class="shadow-font">Project</span></a>
+                        <a data-type="paper" class="section CORADSearchSelector"><span class="shadow-font">Paper</span></a>
                     </div>
                 </div>
             </div>
@@ -106,6 +106,16 @@
                     </table>
                 </div>
             </div>
+            <div id="design-wiki-box">
+                {% if circuitID %}
+                <div>
+                    <a href="/design/share/{{ circuitID }}">View Circuit Design</a>
+                </div>
+                {% endif %}
+                <div>
+                    <a href="http://{{ year }}.igem.org/Team:{{ teamName }}">View Wiki</a>
+                </div>
+            </div>
         </div>
         <div class="right-panel-container">
             <div class="right-panel shadow-box">
@@ -147,6 +157,7 @@
             </div>
         </div>
     </div>
+
     <div class="ui page dimmer">
         <div class="content">
             <div class="center">test</div>
