--- a/designSite/design/templates/design.html
+++ b/designSite/design/templates/design.html
@@ -601,7 +601,19 @@
       </div>
     </div>
   </div>
-
+  
+  <!-- simulation chart -->
+  <div id="simulation-chart" class="ui small modal">
+    <div class="header">Simulation Result</div>
+    <div class="content">
+      <div class="chart-container" id="chart-container"></div>
+    </div>
+    <div class="actions">
+      <div class="ui one bottom attached big buttons">
+        <div id="close-chart" class="ui white button">Close</div>
+      </div>
+    </div>
+  </div>
   <!-- Save modal -->
   <div id="save-modal" class="ui tiny modal">
     <div class="content">
