--- a/designSite/static/css/design.css
+++ b/designSite/static/css/design.css
@@ -606,3 +606,9 @@ div h5,
 #selected-part-sequence {
   width: 100%;
 }
+
+.chart-container {
+  width: 100%;
+  height: 400px;
+  background-color: #FFF;
+}
