--- a/designSite/design/templates/design.html
+++ b/designSite/design/templates/design.html
@@ -623,8 +623,13 @@
   <!-- simulation chart -->
   <div id="simulation-chart" class="ui small modal">
     <div class="header">Simulation Result</div>
-    <div class="content">
+    <div class="scrolling content">
       <div class="chart-container" id="chart-container"></div>
+      <div class="ui divider"></div>
+      <label class="ui header">K Optimization Result</label>
+      <div class="ui divider"></div>
+      <div class="ui relaxed divided items" id="new-ks-container">
+      </div>
     </div>
     <div class="actions">
       <div class="ui one bottom attached big buttons">
