--- a/designSite/static/css/index.css
+++ b/designSite/static/css/index.css
@@ -100,9 +100,10 @@
 }
 
 .button-container {
-  margin-top: 11rem;
-  height: 50rem;
-  width: 21rem;
+  margin-top: 10.5rem;
+  margin-left: 0.1rem;
+  height: 50.5rem;
+  width: 20.7rem;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
