--- a/designSite/static/css/index.css
+++ b/designSite/static/css/index.css
@@ -8,8 +8,7 @@
 }
 
 .logo {
-  height: 150px;
-  width: 300px !important;
+  min-width: 150px;
   margin-top: 10px;
   margin-left: 100px;
 }
@@ -100,9 +99,9 @@
 }
 
 .button-container {
-  margin-top: 10.5rem;
+  margin-top: 6.1rem;
   margin-left: 0.1rem;
-  height: 50.5rem;
+  height: 55rem;
   width: 20.7rem;
   display: flex;
   flex-direction: column;
