--- a/designSite/search/templates/work.html
+++ b/designSite/search/templates/work.html
@@ -14,6 +14,12 @@
 </head>
 
 <body>
+    <!-- img dimmer -->
+    <div class="ui basic modal" id="img-viewer">
+        <div class="content">
+            <img src="#" />
+        </div>
+    </div>
     <!-- top bar -->
     <div class="ui large top fixed menu" id="top-bar">
         <div class="left item">
@@ -82,7 +88,7 @@
             </div>
             <div class="images">
                 {% for image in images %}
-                <img src="{{ image }}">
+                <img class="work-img" src="{{ image }}">
                 {% endfor %}
             </div>
             <div class="parts">Parts:</div>
