--- a/designSite/design/templates/design.html
+++ b/designSite/design/templates/design.html
@@ -84,9 +84,9 @@
             </div>
           </div>
 
-          <a id="interactive-button">
+          <!-- <a id="interactive-button">
             <img src="/static/img/design/icons/check_connection.png">
-          </a>
+          </a> -->
 
           <a id="simulation-button">
             <img src="/static/img/design/icons/simulation.png">
