change role to type

--- a/designSite/account/templates/personal_index.html
+++ b/designSite/account/templates/personal_index.html
@@ -53,7 +53,7 @@
           <tr>
             <th class="sorted descending">ID</th>
             <th class="sorted descending">Name</th>
-            <th class="sorted descending">Role</th>
+            <th class="sorted descending">Type</th>
             <th class="sorted descending">Description</th>
           </tr>
         </thead>
