--- a/designSite/design/templates/design.html
+++ b/designSite/design/templates/design.html
@@ -567,8 +567,8 @@
                 <div class="ui header">Reaction Time</div>
                 <div class="field">
                   <div class="ui fluid right labeled input">
-                    <input id="simulation-time" type="text" placeholder="k..." value="0">
-                    <label for="amount" class="ui basic label">s</label>
+                    <input id="simulation-time" type="text" placeholder="Reaction Time..." value="0">
+                    <label for="amount" class="ui basic label">h</label>
                   </div>
                 </div>
               </div>
@@ -591,8 +591,8 @@
                 <div class="ui header">Reaction Time</div>
                 <div class="field">
                   <div class="ui fluid right labeled input">
-                    <input id="optimization-time" type="text" placeholder="k..." value="0">
-                    <label for="amount" class="ui basic label">s</label>
+                    <input id="optimization-time" type="text" placeholder="Reaction Time..." value="0">
+                    <label for="optimization-time" class="ui basic label">h</label>
                   </div>
                 </div>
               </div>
@@ -602,9 +602,9 @@
                 <div class="ui header">Target:[<span class="optimization-target">None</span>]</div>
                 <div class="field">
                   <div class="ui fluidui labeled labeled input">
-                    <input id="target-amount" type="text" id="amount_{{cid}}" data-id="{{cid}}" placeholder="Amount of substance..."
+                    <input id="target-amount" type="text" id="amount_{{cid}}" data-id="{{cid}}" placeholder="Amount of target..."
                       value="0">
-                    <div class="ui basic label">mol</div>
+                    <div class="ui basic label">μmol</div>
                   </div>
                 </div>
               </div>
