Update frontend of account index page

--- a/igem2018/account/templates/personal_index.html
+++ b/igem2018/account/templates/personal_index.html
@@ -62,7 +62,7 @@
           <tr data-id="{{ part.ID }}">
             <td>{{ part.ID }}</td>
             <td>{{ part.Name }}</td>
-            <td>{{ part.Role }}</td>
+            <td>{{ part.Type }}</td>
             <td>{{ part.Description }}</td>
           </tr>
           {% endfor %}
